--- a/package.json
+++ b/package.json
@@ -9,12 +9,27 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@react-pdf/renderer": "^4.3.2",
+    "canvas-confetti": "^1.9.4",
+    "dayjs": "^1.11.19",
+    "html2pdf.js": "^0.14.0",
+    "jose": "^6.1.3",
+    "js-cookie": "^3.0.5",
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-hook-form": "^7.69.0",
+    "react-icons": "^5.5.0",
+    "react-to-print": "^3.2.0",
+    "sonner": "^2.0.7",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/canvas-confetti": "^1.9.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
